<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_nav_tasks"
        android:title="@string/tasks_tab" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/statistics_tab" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/calendar_tab" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/settings_tab" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile_tab" />
</menu>
